# InnoSCS

./: README.md
.github/workflows/: linter.yml
backend/: .coverage 2  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
backend/app/: config.py
backend/app/api/: __init__.py  exceptions.py  managers.py  schemas.py
backend/app/api/exceptions/: __init__.py  entities.py  errorhandlers.py
backend/app/api/repositories/: __init__.py  thread_repository.py  volunteer_repository.py
backend/app/api/routers/: threads.py  volunteer.py
backend/app/api/services/: __init__.py  thread_service.py  volunteer_service.py
backend/app/bot/: __init__.py  __main__.py  commands.py  utils.py
backend/tests/: conftest.py
backend/tests/app/api/: conftest.py  test_thread_router.py  test_volunteer_router.py
frontend/: .env.test  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.tsx  index.css  index.tsx
frontend/src/components/: BackButton.tsx  KebabMenu.js  KebabMenu.tsx  Main.js  Main.tsx  Menu.tsx  MessageBox.js  MessageBox.tsx  MessageBubble.js  MessageBubble.tsx  Messenger.js  Messenger.tsx  Modal.js  Modal.tsx  Navbar.js  Navbar.tsx  Notification.tsx  PopupMenu.tsx  ProblemSolved.tsx  SideBar.js  SideBar.tsx  SubmitProblem.tsx  SubmitProblemNotification.js  SubmitProblemNotification.tsx  Thread.js  Thread.tsx  ThreadClosed.tsx  WebSocket-Context.tsx  atoms.tsx  config.ts
frontend/src/data/: optionsData.js
frontend/src/tests/: App.test.tsx  BackButton.test.tsx  Main.test.tsx  (+12 more)
(+10 files in other folders)
